# stella-ros-workspace

./: .gitignore  README.md
src/EntrenamientoRL/: CMakeLists.txt  package.xml
src/EntrenamientoRL/launch/: AjustePosicion.launch  EntrenamientoRL.launch  InclinacionRandom.launch  Presentacion.launch
src/EntrenamientoRL/scripts/: AjustePosicion.py  EntreamientoRL.py  EntrenamientoEscalera.py  GraficarRecompensa.py  InclinacionRandom.py  Presentacion.py  aceleraciones.csv  datos_aceleracion.csv
src/ObstaculosTRYTA/: CMakeLists.txt  package.xml
src/ObstaculosTRYTA/launch/: ObstaculosTRYTA.launch
src/ObstaculosTRYTA/scripts/: EvadirObstaculos.py  Programa Durango.py  Programa Rumania.py
src/ROBOTIS-OP2/op2_manager/src/: op2_manager.cpp
src/ROBOTIS-OP2/op2_walking_module/config/: param.yaml
src/ROBOTIS-OP3-Tools/op3_gui_demo/: package.xml
src/ROBOTIS-OP3-Tools/op3_offset_tuner_client/src/: main_window.cpp
src/ROBOTIS-OP3-Tools/op3_tuner_client/src/: main_window.cpp
src/ROBOTIS-OP3/op3_base_module/src/: base_module.cpp
src/ROBOTIS-OP3/op3_head_control_module/src/: head_control_module.cpp
src/SLAM/: CMakeLists.txt  package.xml
src/SLAM/launch/: slam.launch
src/SLAM/scripts/: control.py  main.py  mapeo.py  procesamiento.py  ruta.py  slam.py  vision.py
src/SubirEscaleras/: CMakeLists.txt  package.xml
src/SubirEscaleras/launch/: RegistrarDatos.launch  SubirEscaleras.launch
src/SubirEscaleras/scripts/: Programa Rumania.py  Programa TRYTA.py  RegistrarAceleraciones.py  Secuencia_Ascenso.csv  SubirEscaleras.py  datos_imu CSVV.csv  datos_imu.csv
